# aes

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: 02_setup.ipynb  03_python_grundlagen.ipynb  03_python_grundlagen_loesung.ipynb  04_oop.ipynb  04_oop_loesung.ipynb  05_laufzeitmodell.ipynb  06_parallelisierung.ipynb  utils_06.py
